assign roles
