# Pi4/src/main/java/com/example/sprinproject/role/RoleController.java
@@ -4,6 +4,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
+
 @RestController
 @RequestMapping("/roles")
 public class RoleController {
@@ -23,4 +25,14 @@ public class RoleController {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(e.getMessage());
         }
     }
-}
+
+    @GetMapping("/getRoles")
+    public List<Role> getRoles(){
+        return roleService.getRoles();
+    }
+
+
+
+
+
+    }
