# userappAN/src/app/services/models/registration-request.ts
@@ -3,9 +3,9 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface RegistrationRequest {
+  dateOfBirth: Date;
   email: string;
   firstName: string;
   lastName: string;
   password: string;
-  dateOfBirth: Date;
 }
