# userappAN/src/app/services/services/role-controller.service.ts
@@ -13,6 +13,9 @@ import { StrictHttpResponse } from '../strict-http-response';
 
 import { addRole } from '../fn/role-controller/add-role';
 import { AddRole$Params } from '../fn/role-controller/add-role';
+import { getRoles } from '../fn/role-controller/get-roles';
+import { GetRoles$Params } from '../fn/role-controller/get-roles';
+import { Role } from '../models/role';
 
 @Injectable({ providedIn: 'root' })
 export class RoleControllerService extends BaseService {
@@ -42,6 +45,31 @@ export class RoleControllerService extends BaseService {
   addRole(params: AddRole$Params, context?: HttpContext): Observable<string> {
     return this.addRole$Response(params, context).pipe(
       map((r: StrictHttpResponse<string>): string => r.body)
+    );
+  }
+
+  /** Path part for operation `getRoles()` */
+  static readonly GetRolesPath = '/roles/getRoles';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `getRoles()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getRoles$Response(params?: GetRoles$Params, context?: HttpContext): Observable<StrictHttpResponse<Array<Role>>> {
+    return getRoles(this.http, this.rootUrl, params, context);
+  }
+
+  /**
+   * This method provides access only to the response body.
+   * To access the full response (for headers, for example), `getRoles$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getRoles(params?: GetRoles$Params, context?: HttpContext): Observable<Array<Role>> {
+    return this.getRoles$Response(params, context).pipe(
+      map((r: StrictHttpResponse<Array<Role>>): Array<Role> => r.body)
     );
   }
 
